# ToDoList

./: Dockerfile  Makefile  pyproject.toml
app/application/api/: main.py
app/application/api/lists/: handlers.py  schema.py  task_handlers.py  user_handlers.py
app/domain/entities/: base.py  product.py
app/domain/exceptions/: base.py  product.py
app/domain/values/: base.py  product.py
app/infra/exseptions/: base.py  prod.py
app/infra/repositories/: baserepo.py  prodrepo.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  prod.py  prodcommand.py  product.py
app/logic/exceptions/: base.py  mediator.py
app/tests/: conftest.py  fixture.py
app/tests/domain/value/: test_product.py
app/tests/logic/: test_logic.py
docker_compose/: app.yaml
